...
//

import UIKit

class SearchTableViewController: UIViewController {

    @IBOutlet weak var categorySegmentControl: UISegmentedControl!
    @IBOutlet weak var tableView: UITableView!
    
    //load respective views from nibs
    let loadingAnimationView = Bundle.main.loadNibNamed("LoadingAnimationView", owner: self, options: nil)?.last as! LoadingAnimationView
    let networkErrorAlertView = Bundle.main.loadNibNamed("NetworkErrorAlertView", owner: self, options: nil)?.last as! NetworkErrorAlertView
    
...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        categorySegmentControl.accessibilityIdentifier = "categorySegmentControl"
        searchController.searchBar.accessibilityIdentifier = "searchBar"
        tableView.accessibilityIdentifier = "SearchTableView"
        searchController.searchBar.delegate = self
        DispatchQueue.main.async {
            self.loadingAnimationView.isHidden = false
            self.loadingAnimationView.startAnimating()
        }
        updateCoreDataRecords({
...
